2010-05-20  vadim  <vadim@vk.crocodile.org>

	* ProjectPanel.cpp (ProjectPanel::addRule): fixed #1461 Need
	obvious button to add new rule to the empty rule set

	* instDialog.cpp (instDialog::show): fixed #1462 "if you do a bulk
	install, and then want to do a single install, bulk mode is
	selected"

	* ActionsDialog.cpp (ActionsDialog::setRule): fixed #1464
	SourceForge bug 3004274: "Branch rule set object displays
	improperly".  Branch rule set attribute was not loaded properly
	into Branch action dialog for rules of PF firewalls.

2010-05-17  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler_iosacl_writers.cpp (PrintRule::_printRule):
	restored function of the "comment the code" in the "Script
	options" of the firewall settings dialog for Cisco IOS ACL and
	ProCurve ACL. When this checkbox is off, comments are not
	added to generated script.

	* RuleSetViewDelegate.cpp (RuleSetViewDelegate::paintOptions):
	fixed #1460 "when "show icons in rules" is turned off, there is no
	way to tell when logging is turned on and non-default options are
	present in a rule".

	* fixed #1339 "Logging" icon appears looking the same as "Rule
	options" icon on Mac

2010-05-15  Vadim Kurland  <vadim@vk.crocodile.org>

	* linux24Interfaces.cpp (linux24Interfaces::basicValidateInterfaceName):
	fixed #1458 Should permit interface name "br-lan" for bridge interface
	on Linux. Bridge interfaces on Linux can have any name, including those
	with "-". OpenWRT creates bridge interface with the name "br-lan" by
	default.

2010-05-14  Vadim Kurland  <vadim@vk.crocodile.org>

	* update_addresses: fixed #1455 Function update_addresses() (host
	OS linux24 and derivatives) uses both ip and ifconfig. Should stick
	with /sbin/ip so the script works on systems where ifconfig is
	not installed.

2010-05-13  Vadim Kurland  <vadim@vk.crocodile.org>

	* FWObjectDropArea.cpp (FWObjectDropArea::editObject): fixed #1452
	double click on a rule set in the branch action dialog should open