@@ -1,3 +1,14 @@
+2010-05-21  vadim  <vadim@vk.crocodile.org>
+
+	* FWObjectPropertiesFactory.cpp (FWObjectPropertiesFactory::getPolicyRuleOptions):
+	fixes #1457 "tooltips for rule options seem to be broken". Tooltip
+	always includes the line telling of the rule is "stateful" or
+	"stateless", the function almost never returns empty string now.
+	Added missing hashlimit parameters to the rule options
+	tooltip. Some of the more rarely used hashlimit parameters are
+	still not included in the tooltip. Improved tooltip formatting
+	using html table.
+
 2010-05-20  vadim  <vadim@vk.crocodile.org>
 
 	* ProjectPanel.cpp (ProjectPanel::addRule): fixed #1461 Need
